--- a/.gitconfig
+++ b/.gitconfig
@@ -3,11 +3,12 @@
   amend = commit -S --amend --reuse-message=HEAD
   br = branch
   c = clone --recursive
-  ca = !git add -A && git commit -av
+  ca = !git add -A && git commit -avS
   ci = commit -S
   co = checkout
   contributors = shortlog --summary --numbered
   d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
+  datetag = !"MESS=`date \"+Release %d/%d/%Y - %H:%M\"` && git tag -s `date \"+%Y%m%d%H%M\"` -m \"$MESS\""
   di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
   go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
   l = log --pretty=oneline -n 20 --graph --abbrev-commit
