--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
   go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
   l = log --pretty=oneline -n 20 --graph --abbrev-commit
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  m = merge -S
   p = !"git pull; git submodule foreach git pull origin master"
   path = add --patch
   s = status -s
