--- a/.gitconfig
+++ b/.gitconfig
@@ -30,7 +30,7 @@
 
 [core]
   editor = vim
-  excludesfile = ~/.gitignore_global
+  excludesfile = ~/.gitignore
   whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 [color]
